...
        android:icon="?attr/iconSettingsGeneral"
        android:key="account_settings"
        android:title="@string/account_settings_general_title">

        <com.takisoft.fix.support.v7.preference.AutoSummaryEditTextPreference
            android:dialogTitle="@string/account_settings_description_label"
            android:key="account_description"
            android:title="@string/account_settings_description_label" />

        <CheckBoxPreference
            android:key="account_default"
            android:summary="@string/account_settings_default_summary"
            android:title="@string/account_settings_default_label" />
...
